bk_ida/gccida/g0/dbxout_symbol_name
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_symbol_name/src/dbxout.c:2844:7: error: expected expression
if (  struct suffix ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_symbol_name/src/dbxout.c:2847:22: error: use of undeclared identifier 'unk_76B59B'
v3 = ( const char *)&unk_76B59B; 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dbxout_symbol_name/src/obj/dbxout.o] Error 1
